# skripsi-har

./: .gitignore  README.md  requirements.txt
aktvtas/: README.md
aktvtas/app/: build.gradle
aktvtas/app/src/androidTest/resources/: sample.csv
aktvtas/app/src/main/: AndroidManifest.xml
aktvtas/app/src/test/resources/: sample.csv
aktvtas/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  classifier.cpp
app/src/main/jni/: Android.mk
app/src/main/res/drawable/: ic_lie.xml  ic_motorcycle.xml
app/src/main/res/layout/: activity_main.xml  activity_prediction.xml  activity_register.xml  dialog_training_time.xml  fragment_activity_history.xml  (+5 more)
gradle/wrapper/: gradle-wrapper.properties
har/: __main__.py  base.py  convlstm.py  data.py  har.py  hyperparameter.py  normalize.py  requirements.txt  saver.py
skripsi/: pustaka.bib  skripsi.tex  ugmskripsi.cls
skripsi/bab/: 0.1-prakata.tex  0.2-intisari.tex  1-pendahuluan.tex  2-tinjauan-pustaka.tex  3-landasan-teori.tex  4-analisis-dan-perancangan-sistem.tex  4-metode-penelitian.tex  5-implementasi.tex  6-hasil-penelitian.tex  7-kesimpulan.tex
skripsi/data/: .gitignore  generate.sh
skripsi/data/pelatihan/: hyperparameter.csv  plot-pelatihan.py  run17-accuracy-test.csv  run17-accuracy-train.csv  run34-accuracy-test.csv  run34-accuracy-train.csv  run8-accuracy-test.csv  run8-accuracy-train.csv
skripsi/data/plot-sensor/: plot.py
skripsi/data/prediksi/: summarize.py
skripsi/gambar/: logougm.eps
(+147 files in other folders)
